--- a/src/presentacion/InfRegCliente.form
+++ b/src/presentacion/InfRegCliente.form
@@ -361,6 +361,7 @@
           <Image iconType="3" name="/img/Usuario.gif"/>
         </Property>
         <Property name="text" type="java.lang.String" value="REGISTRAR"/>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarActionPerformed"/>
