--- a/src/presentacion/RegistrarCuenta.form
+++ b/src/presentacion/RegistrarCuenta.form
@@ -214,8 +214,8 @@
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="3">
                 <StringItem index="0" value=""/>
-                <StringItem index="1" value="AHORRO"/>
-                <StringItem index="2" value="CORRIENTE"/>
+                <StringItem index="1" value="CREDITO"/>
+                <StringItem index="2" value="DEBITO"/>
               </StringArray>
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
